Improvement of the german language.xml

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="cancel">Stornieren</string>
-        <string name="done">Fertig</string>
+        <string name="Abbrechen">Stornieren</string>
+        <string name="done">Erledigt</string>
         <string name="hidesong">Möchten Sie diesen Song wirklich verstecken? Die Wiedergabezeit und der \nCache werden gelöscht.</string>
         <string name="new_playlist">Neue playlist</string>
-        <string name="start_radio">Radio hören</string>
+        <string name="start_radio">Radio starten</string>
         <string name="equalizer">Equalizer</string>
         <string name="stop_sleep_timer">Möchten Sie den Schlaf-Timer stoppen?</string>
-        <string name="set_sleep_timer">Einstellen des Sleep Timers</string>
+        <string name="set_sleep_timer">Einstellen des Schlaf-Timer</string>
         <string name="add_to_playlist">Zu Playlist hinzufügen</string>
         <string name="go_to_album">Zum Album gehen</string>
-        <string name="remove_from_queue">Aus der playlist</string>
+        <string name="remove_from_queue">Aus der Warteschlange entfernen</string>
         <string name="remove_from_playlist">Aus der Playlist entfernen</string>
-        <string name="hide">Verstecken</string>
+        <string name="hide">Ausblenden</string>
         <string name="hide_from_quick_picks">Ausblenden von \"Quick picks\"</string>
         <string name="related_albums">Ähnliche Alben</string>
         <string name="similar_artists">Ähnliche Künstler</string>
         <string name="playlists_you_might_like">Playlists, die dir gefallen könnten</string>
         <string name="an_error_has_occurred">Es ist ein Fehler aufgetreten</string>
         <string name="albums">Alben</string>
-        <string name="artists">Künstlern</string>
-        <string name="enter_the_playlist_name">Geben Namen playlist</string>
+        <string name="artists">Künstler/innen</string>
+        <string name="enter_the_playlist_name">Name der Wiedergabeliste eingeben</string>
         <string name="playlists">Playlists</string>
         <string name="favorites">Favoriten</string>
         <string name="offline">Offline</string>
@@ -28,33 +28,33 @@
         <string name="songs">Lieder</string>
         <string name="other_versions">Anderen Versionen</string>
         <string name="album_no_alternative_version">Dieses Album hat keine alternative Version</string>
-        <string name="enqueue">Enqueue</string>
+        <string name="enqueue">Einreihen</string>
         <string name="shuffle">Shuffle</string>
-        <string name="view_all">Anzeigen aller</string>
+        <string name="view_all">Alle Anzeigen</string>
         <string name="from_wikipedia_cca">Von Wikipedia unter Creative Commons Attribution CC-BY-SA 3.0</string>
         <string name="overview">Übersicht</string>
-        <string name="singles">Einzel</string>
-        <string name="library">Library</string>
+        <string name="singles">Singles</string>
+        <string name="library">Bibliothek</string>
         <string name="artist_no_release_album">Dieser Künstler hat kein Album veröffentlicht</string>
         <string name="artist_no_release_single">Dieser Künstler hat keine Single veröffentlicht</string>
         <string name="delete_playlist">Möchtest du diese Playlist wirklich löschen?</string>
         <string name="sync">Synchronisieren</string>
         <string name="rename">Umbenennen</string>
         <string name="delete">löschen</string>
-        <string name="enter_the_lyrics">Geben Sie die lyrics</string>
-        <string name="edit_lyrics">Bearbeiten lyrics</string>
-        <string name="search_lyrics_online">Suche lyrics online</string>
-        <string name="fetch_lyrics_again">Wieder holen lyrics</string>
-        <string name="queue_loop">"Reihe Looping "</string>
+        <string name="enter_the_lyrics">Geben Sie den Songtext ein</string>
+        <string name="edit_lyrics">Bearbeiten des Songtextes</string>
+        <string name="search_lyrics_online">Suche Songtext online</string>
+        <string name="fetch_lyrics_again">Fetch Songtexte wieder</string>
+        <string name="queue_loop">"warteschlangen"</string>
         <string name="id">Id</string>
         <string name="itag">Itag</string>
         <string name="bitrate">Bitrate</string>
-        <string name="size">Size</string>
+        <string name="size">größe</string>
         <string name="cached">Cached</string>
         <string name="loudness">Volumen</string>
-        <string name="clear">Klar</string>
-        <string name="error">Ein Fehler aufgetreten.</string>
-        <string name="enter_a_name">Suche</string>
+        <string name="clear">löschen</string>
+        <string name="error">Es ist ein Fehler aufgetreten.</string>
+        <string name="enter_a_name">einen Namen eingeben</string>
         <string name="online">Online</string>
         <string name="no_results_found">Keine Ergebnisse gefunden. Bitte versuchen Sie eine andere Suchanfrage oder Kategorie</string>
         <string name="videos">Videos</string>
@@ -75,21 +75,21 @@
         <string name="apply_font_padding">Anwenden von Font Padding</string>
         <string name="add_spacing_around_texts">Hinzufügen von Abständen um Texte</string>
         <string name="lockscreen">SPERRBILDSCHIRM</string>
-        <string name="show_song_cover">Show song cover</string>
-        <string name="use_song_cover_on_lockscreen">Verwenden Sie die Titelabdeckung als Sperrbildschirmhintergrund</string>
+        <string name="show_song_cover">Song Cover anzeigen</string>
+        <string name="use_song_cover_on_lockscreen">Songcover auf dem Sperrbildschirm verwenden</string>
         <string name="cache">Cache</string>
         <string name="cache_cleared">Wenn der Cache keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
-        <string name="image_cache">IMAGE CACHE</string>
+        <string name="image_cache">Bild CACHE</string>
         <string name="max_size">Max Größe</string>
         <string name="song_cache">SONG CACHE</string>
         <string name="database">Database</string>
         <string name="reset_quick_picks">Zurücksetzen quick picks</string>
         <string name="quick_picks_are_cleared">Quick picks werden gelöscht</string>
-        <string name="backup">BACKUP</string>
+        <string name="backup">Sicherung</string>
         <string name="personal_preference">Persönliche Einstellungen (z.B. der Theme-Modus) und der Cache sind ausgeschlossen.</string>
         <string name="backup_1">Backup</string>
         <string name="export_the_database">Exportieren der Datenbank in den externen Speicher</string>
-        <string name="restore">RESTORE</string>
+        <string name="restore">Wiederherstellen</string>
         <string name="restore_1">Restore</string>
         <string name="import_the_database">Importieren der Datenbank aus dem externen Speicher</string>
         <string name="other">Ander</string>
@@ -99,7 +99,7 @@
         <string name="enable_android_auto_support">Unterstützung für Android Auto aktivieren</string>
         <string name="search_history">SUCHVERLAUF</string>
         <string name="pause_search_history">Anhalten des Suchverlaufs</string>
-        <string name="neither_save_new_searched_query">Keine neuen Suchabfragen speichern oder Verlauf anzeigen</string>
+        <string name="neither_save_new_searched_query">Keine neuen Suchanfragen speichern oder Verlauf anzeigen</string>
         <string name="clear_search_history">Suchverlauf löschen</string>
         <string name="history_is_empty">Geschichte ist leer</string>
         <string name="service_lifetime">SERVICE LIFETIME</string>
@@ -117,7 +117,7 @@
         <string name="resume_playback">Wiedergabe fortzusetzen</string>
         <string name="when_device_is_connected">Wenn ein kabelgebundenes oder Bluetooth-Gerät verbunden ist</string>
         <string name="audio">AUDIO</string>
-        <string name="skip_silence">Stille auslassen</string>
+        <string name="skip_silence">Stille überspringen</string>
         <string name="skip_silent_parts_during_playback">Stumme Teile während der Wiedergabe überspringen</string>
         <string name="loudness_normalization">Lautheitsanpassung</string>
         <string name="autoadjust_the_volume">Stellen Sie die Lautstärke auf ein festes Niveau ein</string>
