--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
         <string name="Abbrechen">Stornieren</string>
-        <string name="done">Erledigt</string>
-        <string name="hidesong">Möchten Sie diesen Song wirklich verstecken? Die Wiedergabezeit und der \nCache werden gelöscht.</string>
-        <string name="new_playlist">Neue playlist</string>
+        <string name="done">Fertig</string>
+        <string name="hidesong">Möchten Sie diesen Song wirklich löschen? Die Wiedergabezeit und der \nCache werden gelöscht.</string>
+        <string name="new_playlist">Neue Wiedergabeliste</string>
         <string name="start_radio">Radio starten</string>
         <string name="equalizer">Equalizer</string>
         <string name="stop_sleep_timer">Möchten Sie den Schlaf-Timer stoppen?</string>
         <string name="set_sleep_timer">Einstellen des Schlaf-Timer</string>
-        <string name="add_to_playlist">Zu Playlist hinzufügen</string>
+        <string name="add_to_playlist">Zu Wiedergabeliste hinzufügen</string>
         <string name="go_to_album">Zum Album gehen</string>
         <string name="remove_from_queue">Aus der Warteschlange entfernen</string>
-        <string name="remove_from_playlist">Aus der Playlist entfernen</string>
+        <string name="remove_from_playlist">Aus der Wiedergabeliste entfernen</string>
         <string name="hide">Ausblenden</string>
         <string name="hide_from_quick_picks">Ausblenden von \"Quick picks\"</string>
         <string name="related_albums">Ähnliche Alben</string>
         <string name="similar_artists">Ähnliche Künstler</string>
-        <string name="playlists_you_might_like">Playlists, die dir gefallen könnten</string>
+        <string name="playlists_you_might_like">Wiedergabelisten, die dir gefallen könnten</string>
         <string name="an_error_has_occurred">Es ist ein Fehler aufgetreten</string>
         <string name="albums">Alben</string>
         <string name="artists">Künstler/innen</string>
         <string name="enter_the_playlist_name">Name der Wiedergabeliste eingeben</string>
-        <string name="playlists">Playlists</string>
+        <string name="playlists">Wiedergabelisten</string>
         <string name="favorites">Favoriten</string>
         <string name="offline">Offline</string>
-        <string name="quick_picks">Quick picks</string>
+        <string name="quick_picks">Schnellauswahl</string>
         <string name="songs">Lieder</string>
         <string name="other_versions">Anderen Versionen</string>
         <string name="album_no_alternative_version">Dieses Album hat keine alternative Version</string>
@@ -36,25 +36,25 @@
         <string name="singles">Singles</string>
         <string name="library">Bibliothek</string>
         <string name="artist_no_release_album">Dieser Künstler hat kein Album veröffentlicht</string>
-        <string name="artist_no_release_single">Dieser Künstler hat keine Single veröffentlicht</string>
+        <string name="artist_no_release_single">Dieser Künstler hat keine Singles veröffentlicht</string>
         <string name="delete_playlist">Möchtest du diese Playlist wirklich löschen?</string>
         <string name="sync">Synchronisieren</string>
         <string name="rename">Umbenennen</string>
-        <string name="delete">löschen</string>
+        <string name="delete">Löschen</string>
         <string name="enter_the_lyrics">Geben Sie den Songtext ein</string>
         <string name="edit_lyrics">Bearbeiten des Songtextes</string>
         <string name="search_lyrics_online">Suche Songtext online</string>
         <string name="fetch_lyrics_again">Fetch Songtexte wieder</string>
-        <string name="queue_loop">"warteschlangen"</string>
+        <string name="queue_loop">"Warteschlangen"</string>
         <string name="id">Id</string>
         <string name="itag">Itag</string>
         <string name="bitrate">Bitrate</string>
-        <string name="size">größe</string>
-        <string name="cached">Cached</string>
-        <string name="loudness">Volumen</string>
-        <string name="clear">löschen</string>
+        <string name="size">Größe</string>
+        <string name="cached">Zwischenspeicher</string>
+        <string name="loudness">Lautstärke</string>
+        <string name="clear">Löschen</string>
         <string name="error">Es ist ein Fehler aufgetreten.</string>
-        <string name="enter_a_name">einen Namen eingeben</string>
+        <string name="enter_a_name">Einen Namen eingeben</string>
         <string name="online">Online</string>
         <string name="no_results_found">Keine Ergebnisse gefunden. Bitte versuchen Sie eine andere Suchanfrage oder Kategorie</string>
         <string name="videos">Videos</string>
@@ -68,31 +68,31 @@
         <string name="theme">Theme</string>
         <string name="theme_mode">Themenmodus</string>
         <string name="shapes">FORMEN</string>
-        <string name="thumbnail_roundness">Thumbnail Rundheit</string>
+        <string name="thumbnail_roundness">Rundheit der Miniaturansicht</string>
         <string name="text">TEXT</string>
         <string name="use_system_font">Systemschrift verwenden</string>
         <string name="use_font_by_the_system">Verwenden Sie die vom System angewendete Schriftart</string>
         <string name="apply_font_padding">Anwenden von Font Padding</string>
-        <string name="add_spacing_around_texts">Hinzufügen von Abständen um Texte</string>
+        <string name="add_spacing_around_texts">Hinzufügen von Abständen in Texte</string>
         <string name="lockscreen">SPERRBILDSCHIRM</string>
         <string name="show_song_cover">Song Cover anzeigen</string>
         <string name="use_song_cover_on_lockscreen">Songcover auf dem Sperrbildschirm verwenden</string>
-        <string name="cache">Cache</string>
-        <string name="cache_cleared">Wenn der Cache keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
-        <string name="image_cache">Bild CACHE</string>
+        <string name="cache">Zwischenspeicher</string>
+        <string name="cache_cleared">Wenn der Zwischenspeicher keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
+        <string name="image_cache">Bild Zwischenspeicher</string>
         <string name="max_size">Max Größe</string>
-        <string name="song_cache">SONG CACHE</string>
-        <string name="database">Database</string>
-        <string name="reset_quick_picks">Zurücksetzen quick picks</string>
-        <string name="quick_picks_are_cleared">Quick picks werden gelöscht</string>
+        <string name="song_cache">SONG Zwischenspeicher</string>
+        <string name="database">Datenbank</string>
+        <string name="reset_quick_picks">Zurücksetzen der Schnellauswahl</string>
+        <string name="quick_picks_are_cleared">Schnellauswahl wird gelöscht</string>
         <string name="backup">Sicherung</string>
-        <string name="personal_preference">Persönliche Einstellungen (z.B. der Theme-Modus) und der Cache sind ausgeschlossen.</string>
-        <string name="backup_1">Backup</string>
-        <string name="export_the_database">Exportieren der Datenbank in den externen Speicher</string>
+        <string name="personal_preference">Persönliche Einstellungen (z.B. der Theme-Modus) und der Zwischenspeicher sind ausgeschlossen.</string>
+        <string name="backup_1">Sicherung</string>
+        <string name="export_the_database">Exportieren der Datenbank</string>
         <string name="restore">Wiederherstellen</string>
-        <string name="restore_1">Restore</string>
-        <string name="import_the_database">Importieren der Datenbank aus dem externen Speicher</string>
-        <string name="other">Ander</string>
+        <string name="restore_1">Wiederherstellen</string>
+        <string name="import_the_database">Importieren der Datenbank</string>
+        <string name="other">Sonstiges</string>
         <string name="android_auto">ANDROID AUTO</string>
         <string name="enable_unknown_sources">Denken Sie daran, \"Unbekannte Quellen\" in den Entwicklereinstellungen von Android Auto zu aktivieren.</string>
         <string name="android_auto_1">Android Auto</string>
@@ -101,7 +101,7 @@
         <string name="pause_search_history">Anhalten des Suchverlaufs</string>
         <string name="neither_save_new_searched_query">Keine neuen Suchanfragen speichern oder Verlauf anzeigen</string>
         <string name="clear_search_history">Suchverlauf löschen</string>
-        <string name="history_is_empty">Geschichte ist leer</string>
+        <string name="history_is_empty">Wiedergabeverlauf ist leer</string>
         <string name="service_lifetime">SERVICE LIFETIME</string>
         <string name="battery_optimizations_applied">Wenn Batterieoptimierungen angewendet werden, kann die Wiedergabebenachrichtigung plötzlich verschwinden, wenn sie angehalten wird.</string>
         <string name="is_android12">Seit Android 12 ist das Deaktivieren von Batterieoptimierungen erforderlich, damit die Option \"Unbesiegbarer Dienst\" wirksam wird.</string>
@@ -109,7 +109,7 @@
         <string name="already_unrestricted">Schon uneingeschränkt</string>
         <string name="disable_background_restrictions">Deaktivieren von Einschränkungen im Hintergrund</string>
         <string name="invincible_service">Invincible service</string>
-        <string name="turning_off_battery_optimizations_is_not_enough">Beim Ausschalten der Batterie Optimierungen ist nicht genug</string>
+        <string name="turning_off_battery_optimizations_is_not_enough">Wenn Ausschalten der Batterie Optimierungen ist nicht genug</string>
         <string name="player_audio"><![CDATA[Player & Audio]]></string>
         <string name="player">PLAYER</string>
         <string name="persistent_queue">Persistente Warteschlange</string>
@@ -119,15 +119,15 @@
         <string name="audio">AUDIO</string>
         <string name="skip_silence">Stille überspringen</string>
         <string name="skip_silent_parts_during_playback">Stumme Teile während der Wiedergabe überspringen</string>
-        <string name="loudness_normalization">Lautheitsanpassung</string>
+        <string name="loudness_normalization">Lautstärkeanpassung</string>
         <string name="autoadjust_the_volume">Stellen Sie die Lautstärke auf ein festes Niveau ein</string>
         <string name="interact_with_the_system_equalizer">Interagieren Sie mit dem System-Equalizer</string>
-        <string name="about">About</string>
+        <string name="about">Über</string>
         <string name="more_of">Mehr von</string>
-        <string name="sleep_timer">Sleep timer</string>
+        <string name="sleep_timer">Schlaf-Timer</string>
         <string name="left">%1$s übrigen</string>
         <string name="set">Legen Sie</string>
-        <string name="play_next">Play next</string>
+        <string name="play_next">Als nächstes wiedergeben</string>
         <string name="confirm">Bestätigen</string>
         <string name="show">Zeigen</string>
         <string name="unsynchronized_lyrics">unsynchronisierten lyrics</string>
