--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,5 @@
     <string name="cleanup">CLEANUP</string>
     <string name="delete_playback_events">Delete %1$s playback events</string>
     <string name="existing_data_will_be_overwritten">Existing data will be overwritten.\n%1$s will automatically close itself after restoring the database.</string>
+    <string name="on_queue">on queue</string>
 </resources>
