--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="cancel">Stornieren</string>
+        <string name="cancel">Abrechen</string>
         <string name="done">Fertig</string>
         <string name="hidesong">Möchten Sie diesen Song wirklich löschen? Die Wiedergabezeit und der \nCache werden gelöscht.</string>
         <string name="new_playlist">Neue Wiedergabeliste</string>
@@ -12,8 +12,8 @@
         <string name="go_to_album">Zum Album gehen</string>
         <string name="remove_from_queue">Aus der Warteschlange entfernen</string>
         <string name="remove_from_playlist">Aus der Wiedergabeliste entfernen</string>
-        <string name="hide">Ausblenden</string>
-        <string name="hide_from_quick_picks">Ausblenden von \"Quick picks\"</string>
+        <string name="hide">Löschen</string>
+        <string name="hide_from_quick_picks">Löschen von \"Quick picks\"</string>
         <string name="related_albums">Ähnliche Alben</string>
         <string name="similar_artists">Ähnliche Künstler</string>
         <string name="playlists_you_might_like">Wiedergabelisten, die dir gefallen könnten</string>
@@ -25,8 +25,8 @@
         <string name="favorites">Favoriten</string>
         <string name="offline">Offline</string>
         <string name="quick_picks">Schnellauswahl</string>
-        <string name="songs">Lieder</string>
-        <string name="other_versions">Anderen Versionen</string>
+        <string name="songs">Songs</string>
+        <string name="other_versions">Alternative Versionen</string>
         <string name="album_no_alternative_version">Dieses Album hat keine alternative Version</string>
         <string name="enqueue">Einreihen</string>
         <string name="shuffle">Shuffle</string>
@@ -44,8 +44,8 @@
         <string name="enter_the_lyrics">Geben Sie den Songtext ein</string>
         <string name="edit_lyrics">Bearbeiten des Songtextes</string>
         <string name="search_lyrics_online">Suche Songtext online</string>
-        <string name="fetch_lyrics_again">Fetch Songtexte wieder</string>
-        <string name="queue_loop">"Warteschlangen"</string>
+        <string name="fetch_lyrics_again">Songtexte erneut herunterladen</string>
+        <string name="queue_loop">"Warteschlange "</string>
         <string name="id">Id</string>
         <string name="itag">Itag</string>
         <string name="bitrate">Bitrate</string>
@@ -64,59 +64,59 @@
         <string name="you_will_be_redirected_to_github">Sie werden weitergeleitet zu GitHub</string>
         <string name="request_a_feature_or_suggest_an_idea">Fordern Sie ein Feature an oder schlagen Sie eine Idee vor</string>
         <string name="appearance">Aussehen</string>
-        <string name="colors">FARBEN</string>
+        <string name="colors">Farben</string>
         <string name="theme">Theme</string>
         <string name="theme_mode">Themenmodus</string>
-        <string name="shapes">FORMEN</string>
+        <string name="shapes">Formen</string>
         <string name="thumbnail_roundness">Rundheit der Miniaturansicht</string>
-        <string name="text">TEXT</string>
+        <string name="text">Text</string>
         <string name="use_system_font">Systemschrift verwenden</string>
         <string name="use_font_by_the_system">Verwenden Sie die vom System angewendete Schriftart</string>
-        <string name="apply_font_padding">Anwenden von Font Padding</string>
-        <string name="add_spacing_around_texts">Hinzufügen von Abständen in Texte</string>
-        <string name="lockscreen">SPERRBILDSCHIRM</string>
+        <string name="apply_font_padding">Textabstände</string>
+        <string name="add_spacing_around_texts">Textabstände hinzufügen</string>
+        <string name="lockscreen">Sperbildschirm</string>
         <string name="show_song_cover">Song Cover anzeigen</string>
         <string name="use_song_cover_on_lockscreen">Songcover auf dem Sperrbildschirm verwenden</string>
         <string name="cache">Zwischenspeicher</string>
         <string name="cache_cleared">Wenn der Zwischenspeicher keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
         <string name="image_cache">Bild Zwischenspeicher</string>
-        <string name="max_size">Max Größe</string>
-        <string name="song_cache">SONG Zwischenspeicher</string>
+        <string name="max_size">Max. Größe</string>
+        <string name="song_cache">Song Zwischenspeicher</string>
         <string name="database">Datenbank</string>
         <string name="reset_quick_picks">Zurücksetzen der Schnellauswahl</string>
         <string name="quick_picks_are_cleared">Schnellauswahl wird gelöscht</string>
         <string name="backup">Sicherung</string>
         <string name="personal_preference">Persönliche Einstellungen (z.B. der Theme-Modus) und der Zwischenspeicher sind ausgeschlossen.</string>
-        <string name="backup_1">Sicherung</string>
-        <string name="export_the_database">Exportieren der Datenbank</string>
+        <string name="backup_1">Sichern</string>
+        <string name="export_the_database">Sichern der Musik-Datenbank</string>
         <string name="restore">Wiederherstellen</string>
         <string name="restore_1">Wiederherstellen</string>
-        <string name="import_the_database">Importieren der Datenbank</string>
+        <string name="import_the_database">Wiederherstellen der Musik-Datenbank</string>
         <string name="other">Sonstiges</string>
-        <string name="android_auto">ANDROID AUTO</string>
+        <string name="android_auto">Android Auto</string>
         <string name="enable_unknown_sources">Denken Sie daran, \"Unbekannte Quellen\" in den Entwicklereinstellungen von Android Auto zu aktivieren.</string>
         <string name="android_auto_1">Android Auto</string>
         <string name="enable_android_auto_support">Unterstützung für Android Auto aktivieren</string>
-        <string name="search_history">SUCHVERLAUF</string>
+        <string name="search_history">Suchverlauf</string>
         <string name="pause_search_history">Anhalten des Suchverlaufs</string>
         <string name="neither_save_new_searched_query">Keine neuen Suchanfragen speichern oder Verlauf anzeigen</string>
         <string name="clear_search_history">Suchverlauf löschen</string>
         <string name="history_is_empty">Wiedergabeverlauf ist leer</string>
-        <string name="service_lifetime">SERVICE LIFETIME</string>
-        <string name="battery_optimizations_applied">Wenn Batterieoptimierungen angewendet werden, kann die Wiedergabebenachrichtigung plötzlich verschwinden, wenn sie angehalten wird.</string>
-        <string name="is_android12">Seit Android 12 ist das Deaktivieren von Batterieoptimierungen erforderlich, damit die Option \"Unbesiegbarer Dienst\" wirksam wird.</string>
-        <string name="ignore_battery_optimizations">Ignorieren von Batterieoptimierungen</string>
+        <string name="service_lifetime">Service Lifetime</string>
+        <string name="battery_optimizations_applied">Wenn Akku-Optimierungen angewendet werden, kann die Wiedergabebenachrichtigung plötzlich verschwinden, wenn sie angehalten wird.</string>
+        <string name="is_android12">Seit Android 12 ist das Deaktivieren von Akku-Optimierungen erforderlich, damit die Option \"Unbesiegbarer Dienst\" wirksam wird.</string>
+        <string name="ignore_battery_optimizations">Ignorieren der Akku-Optimierungen</string>
         <string name="already_unrestricted">Schon uneingeschränkt</string>
         <string name="disable_background_restrictions">Deaktivieren von Einschränkungen im Hintergrund</string>
         <string name="invincible_service">Invincible service</string>
-        <string name="turning_off_battery_optimizations_is_not_enough">Wenn Ausschalten der Batterie Optimierungen ist nicht genug</string>
+        <string name="turning_off_battery_optimizations_is_not_enough">Wenn Ausschalten der Akku-Optimierungen nicht ausreicht</string>
         <string name="player_audio"><![CDATA[Player & Audio]]></string>
-        <string name="player">PLAYER</string>
+        <string name="player">Player</string>
         <string name="persistent_queue">Persistente Warteschlange</string>
         <string name="save_and_restore_playing_songs">Speichern und Wiederherstellen der Wiedergabe von Songs</string>
         <string name="resume_playback">Wiedergabe fortzusetzen</string>
         <string name="when_device_is_connected">Wenn ein kabelgebundenes oder Bluetooth-Gerät verbunden ist</string>
-        <string name="audio">AUDIO</string>
+        <string name="audio">Audio</string>
         <string name="skip_silence">Stille überspringen</string>
         <string name="skip_silent_parts_during_playback">Stumme Teile während der Wiedergabe überspringen</string>
         <string name="loudness_normalization">Lautstärkeanpassung</string>
@@ -133,7 +133,7 @@
         <string name="unsynchronized_lyrics">unsynchronisierten lyrics</string>
         <string name="synchronized_lyrics">synchronisiert lyrics</string>
         <string name="provided_by">Bildmaterial von</string>
-        <string name="cleanup">CLEANUP</string>
+        <string name="cleanup">Zurücksetzen</string>
         <string name="delete_playback_events">Löschen %1$s Wiedergabeereignisse</string>
         <string name="existing_data_will_be_overwritten">Vorhandene Daten werden überschrieben.\n%1$s schließt sich automatisch nach dem Wiederherstellen der Datenbank.</string>
         <string name="on_queue">in der Warteschlange</string>
