--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -137,4 +137,9 @@
     <string name="delete_playback_events">Eliminar %1$s eventos de reproducción</string>
     <string name="existing_data_will_be_overwritten">Los datos existentes se sobrescribirán.\n%1$s se cerrará automáticamente después de restaurar la base de datos.</string>
     <string name="on_queue">en cola</string>
+    <string name="folder_cache">CACHÉ DE CARPETA</string>
+    <string name="cache_reset_by_clicking_button">Atención, al hacer clic en el botón a continuación, la carpeta de ubicación de caché se restablecerá a la configuración predeterminada</string>
+    <string name="cache_location_folder">Carpeta de ubicación</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">A partir de Android 10, es posible que esta función no esté disponible</string>
+    <string name="reset_cache_location_folder">RESTABLECER CACHE</string>
 </resources>
