--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,9 @@
     <string name="delete_playback_events">Delete %1$s playback events</string>
     <string name="existing_data_will_be_overwritten">Existing data will be overwritten.\n%1$s will automatically close itself after restoring the database.</string>
     <string name="on_queue">on queue</string>
+    <string name="folder_cache">FOLDER CACHE</string>
+    <string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
+    <string name="cache_location_folder">Location folder</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">From Android 10, this feature may not be available</string>
+    <string name="reset_cache_location_folder">RESET CACHE LOCATION FOLDER</string>
 </resources>
