--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -137,4 +137,9 @@
         <string name="delete_playback_events">Löschen %1$s Wiedergabeereignisse</string>
         <string name="existing_data_will_be_overwritten">Vorhandene Daten werden überschrieben.\n%1$s schließt sich automatisch nach dem Wiederherstellen der Datenbank.</string>
         <string name="on_queue">in der Warteschlange</string>
+    <string name="folder_cache">FOLDER CACHE</string>
+        <string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
+        <string name="cache_location_folder">Location folder</string>
+        <string name="custom_cache_from_android_10_may_not_be_available">From Android 10, this feature may not be available</string>
+        <string name="reset_cache_location_folder">RESET CACHE LOCATION FOLDER</string>
 </resources>
