--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -137,4 +137,9 @@
     <string name="delete_playback_events">Удалить %1$s События воспроизведения</string>
     <string name="existing_data_will_be_overwritten">Существующие данные перезаписываются.\n%1$s автоматически закрывается после восстановления базы данных.</string>
     <string name="on_queue">в очереди</string>
+    <string name="folder_cache">FOLDER CACHE</string>
+    <string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
+    <string name="cache_location_folder">Location folder</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">From Android 10, this feature may not be available</string>
+    <string name="reset_cache_location_folder">RESET CACHE LOCATION FOLDER</string>
 </resources>
