--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -142,4 +142,5 @@
     <string name="cache_location_folder">Posizione della cache</string>
     <string name="custom_cache_from_android_10_may_not_be_available">A partire da Android 10, questa funzionalità potrebbe non essere disponibile</string>
     <string name="reset_cache_location_folder">RESET CARTELLA CACHE</string>
+    <string name="used">" usato"</string>
 </resources>
