--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -144,4 +144,9 @@
     <string name="reset_cache_location_folder">RESET CARTELLA CACHE</string>
     <string name="used">" usato"</string>
     <string name="now_playing">In riproduzione...</string>
+    <string name="close_background_player">Chiudi lettore in background</string>
+    <string name="when_app_swipe_out_from_task_manager">Quando l\'app viene rimossa dal task manager</string>
+    <string name="opening_url">sta caricando...</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">C\'è stato un errore nel recupero delle lyrics</string>
+    <string name="are_not_available_for_this_song">non sono disponibili per questo brano</string>
 </resources>
