Info update Improvement english translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="invincible_service">Invincible service</string>
     <string name="turning_off_battery_optimizations_is_not_enough">When turning off battery optimizations is not enough</string>
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
-    <string name="player">PLAYER</string>
+    <string name="player">Player</string>
     <string name="persistent_queue">Persistent queue</string>
     <string name="save_and_restore_playing_songs">Save and restore playing songs</string>
     <string name="resume_playback">Resume playback</string>
