--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -137,22 +137,22 @@
         <string name="delete_playback_events">Löschen %1$s Wiedergabeereignisse</string>
         <string name="existing_data_will_be_overwritten">Vorhandene Daten werden überschrieben.\n%1$s schließt sich automatisch nach dem Wiederherstellen der Datenbank.</string>
         <string name="on_queue">in der Warteschlange</string>
-    <string name="folder_cache">FOLDER CACHE</string>
-        <string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
-        <string name="cache_location_folder">Location folder</string>
-        <string name="custom_cache_from_android_10_may_not_be_available">From Android 10, this feature may not be available</string>
-        <string name="reset_cache_location_folder">RESET CACHE LOCATION FOLDER</string>
-    <string name="used">" used"</string>
-    <string name="now_playing">Now playing...</string>
-    <string name="close_background_player">Close background player</string>
-        <string name="when_app_swipe_out_from_task_manager">When app swipe out from task manager</string>
-    <string name="opening_url">is loading...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">An error has occurred while fetching the lyrics</string>
-    <string name="are_not_available_for_this_song">are not available for this song</string>
-        <string name="error_a_network_error_has_occurred">A network error has occurred</string>
-        <string name="error_couldn_t_find_a_playable_audio_format">Couldn\'t find a playable audio format</string>
-        <string name="error_the_original_video_source_of_this_song_has_been_deleted">The original video source of this song has been deleted</string>
-        <string name="error_this_song_cannot_be_played_due_to_server_restrictions">This song cannot be played due to server restrictions</string>
-        <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">The returned video id doesn\'t match the requested one</string>
-        <string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
+    <string name="folder_cache">Zwischenspeicher-Ort</string>
+        <string name="cache_reset_by_clicking_button">Achtung, wenn Sie auf die Schaltfläche unten klicken, wird der Zwischenspeicher-Ordner auf die Standardeinstellung zurückgesetzt</string>
+        <string name="cache_location_folder">Standortordner</string>
+        <string name="custom_cache_from_android_10_may_not_be_available">Ab Android 10 ist diese Funktion möglicherweise nicht mehr verfügbar</string>
+        <string name="reset_cache_location_folder">Zwischenspeicher-Ordner Zurücksetzen</string>
+    <string name="used">"verwendet"</string>
+    <string name="now_playing">Jetzt wird gespielt...</string>
+    <string name="close_background_player">Hintergrund-Player schließen</string>
+        <string name="when_app_swipe_out_from_task_manager">Wenn die Anwendung im Task-Manager geschlossen wird</string>
+    <string name="opening_url">wird geladen...</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">Beim Abrufen des Liedtextes ist ein Fehler aufgetreten</string>
+    <string name="are_not_available_for_this_song">sind für dieses Lied nicht verfügbar</string>
+        <string name="error_a_network_error_has_occurred">Es ist ein Netzwerkfehler aufgetreten</string>
+        <string name="error_couldn_t_find_a_playable_audio_format">Konnte kein abspielbares Audio-Format finden</string>
+        <string name="error_the_original_video_source_of_this_song_has_been_deleted">Die ursprüngliche Videoquelle zu diesem Lied wurde gelöscht</string>
+        <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Dieses Lied kann aufgrund von Serverbeschränkungen nicht abgespielt werden</string>
+        <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">Die zurückgegebene Video-ID stimmt nicht mit der angeforderten überein</string>
+        <string name="error_an_unknown_playback_error_has_occurred">Es ist ein unbekannter Wiedergabefehler aufgetreten</string>
 </resources>
