Player and translations improvements

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -156,4 +156,5 @@
         <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">Die zurückgegebene Video-ID stimmt nicht mit der angeforderten überein</string>
         <string name="error_an_unknown_playback_error_has_occurred">Es ist ein unbekannter Wiedergabefehler aufgetreten</string>
     <string name="tips">Tips</string>
+    <string name="next_playing">Next playing...</string>
 </resources>
