--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -157,7 +157,7 @@
     <string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
     <string name="tips">Suggerimenti</string>
     <string name="next_playing">Successiva...</string>
-    <string name="quick_pics_and_tips">Quick Pics and Tips</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">It\'s the minimum listening time, to include the song as a possible Tips or Quick Pics</string>
-    <string name="min_listening_time">Min listening time</string>
+    <string name="quick_pics_and_tips">Scelte rapide e Suggerimenti</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">È il tempo minimo di ascolto, per includere la canzone come eventuali Suggerimenti e Scelte rapide</string>
+    <string name="min_listening_time">Tempo minimo di ascolto</string>
 </resources>
