Added Turkish language

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -112,10 +112,10 @@
     <string name="turning_off_battery_optimizations_is_not_enough">When turning off battery optimizations is not enough</string>
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
     <string name="player">PLAYER</string>
-    <string name="persistent_queue">Queue persistante</string>
+    <string name="persistent_queue">File d\'attente persistante</string>
     <string name="save_and_restore_playing_songs">Enregistrer et restaurer la lecture des chansons</string>
     <string name="resume_playback">Reprendre la lecture</string>
-    <string name="when_device_is_connected">Quand è collegato un dispositif câblé le bluetooth</string>
+    <string name="when_device_is_connected">Lorsqu\'un appareil filaire ou Bluetooth est connecté</string>
     <string name="audio">AUDIO</string>
     <string name="skip_silence">Ignorer le silence</string>
     <string name="skip_silent_parts_during_playback">Ignorer les parties silencieuses pendant la lecture</string>
@@ -143,21 +143,21 @@
     <string name="custom_cache_from_android_10_may_not_be_available">À partir d\'Android 10, cette fonctionnalité peut ne pas être disponible</string>
     <string name="reset_cache_location_folder">RÉINITIALISER CACHE</string>
     <string name="used">" utilisé"</string>
-    <string name="now_playing">Now playing...</string>
-    <string name="close_background_player">Close background player</string>
-    <string name="when_app_swipe_out_from_task_manager">When app swipe out from task manager</string>
-    <string name="opening_url">is loading...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">An error has occurred while fetching the lyrics</string>
-    <string name="are_not_available_for_this_song">are not available for this song</string>
-    <string name="error_a_network_error_has_occurred">A network error has occurred</string>
-    <string name="error_couldn_t_find_a_playable_audio_format">Couldn\'t find a playable audio format</string>
-    <string name="error_the_original_video_source_of_this_song_has_been_deleted">The original video source of this song has been deleted</string>
-    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">This song cannot be played due to server restrictions</string>
-    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">The returned video id doesn\'t match the requested one</string>
-    <string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
-    <string name="tips">Tips</string>
-    <string name="next_playing">Next playing...</string>
-    <string name="quick_pics_and_tips">Quick Pics and Tips</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">It\'s the minimum listening time, to include the song as a possible Tips or Quick Pics</string>
-    <string name="min_listening_time">Min listening time</string>
+    <string name="now_playing">Actuel...</string>
+    <string name="close_background_player">Fermer le lecteur en arrière-plan</string>
+    <string name="when_app_swipe_out_from_task_manager">Lorsque l\'application glisse hors du gestionnaire de tâches</string>
+    <string name="opening_url">en cours de chargement...</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">Une erreur s\'est produite lors de la récupération des lyrics</string>
+    <string name="are_not_available_for_this_song">ne sont pas disponibles pour cette chanson</string>
+    <string name="error_a_network_error_has_occurred">Une erreur réseau s\'est produite</string>
+    <string name="error_couldn_t_find_a_playable_audio_format">Impossible de trouver un format audio lisible</string>
+    <string name="error_the_original_video_source_of_this_song_has_been_deleted">La source vidéo originale de cette chanson a été supprimée</string>
+    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Cette chanson ne peut pas être jouée en raison de restrictions du serveur</string>
+    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant de la vidéo renvoyé ne correspond pas à celui demandé</string>
+    <string name="error_an_unknown_playback_error_has_occurred">"Une erreur de lecture inconnue s'est produite "</string>
+    <string name="tips">Conseils</string>
+    <string name="next_playing">Suivant...</string>
+    <string name="quick_pics_and_tips">Quick Pics et Conseils</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale, pour inclure la chanson comme éventuels conseils ou Quick Pics</string>
+    <string name="min_listening_time">Temps d\'écoute minimum</string>
 </resources>
